# f2-commander

./: .gitignore  README.md  check  pyproject.toml  setup.cfg
f2/: app.py  config.py  fs.py  main.py  shell.py
f2/tcss/: main.tcss
f2/widgets/: bookmarks.py  dialogs.py  filelist.py  help.py  panel.py  preview.py
sketch/: Makefile  requirements.txt  tcmd.py  tcmd.tcss
tcmd/: app.py  fs.py  main.py  shell.py
tcmd/tcss/: main.tcss
tcmd/widgets/: confirm.py  copy.py  delete.py  dialogs.py  edit.py  filelist.py  message.py  move.py  panel.py  preview.py  view.py
