[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "textual-commander"
version = "0.1.0"
description = ""
authors = ["candidtim <timcandid@gmail.com>"]
readme = "README.md"
packages = [{include = "tcmd"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = ">=0.38.1,<1"
textual-terminal = ">=0.3.0,<1"
humanize = "^4.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.12"
flake8 = "^6.1"
mypy = "^1.5"
pytest = "^7.4"
textual-dev = "^1.2"
black = "^23.9.1"

[tool.poetry.scripts]
tcmd = "tcmd.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
ignore_missing_imports = true
files = "tcmd,tests"
