[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "textual-commander"
version = "0.1.0"
description = ""
authors = ["candidtim <timcandid@gmail.com>"]
readme = "README.md"
packages = [{include = "tcmd"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = ">=0.72,<1"
humanize = "^4.9"
send2trash = "^1.8.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.8"
pytest = "^8.0"
textual-dev = "^1.5"
black = "^24.1.1"

[tool.poetry.scripts]
tcmd = "tcmd.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
ignore_missing_imports = true
files = "tcmd,tests"
