[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "f2-commander"
version = "0.1.0"
description = "F2 Commander is an orthodox file manager for the modern world."
license = "MPL-2.0"
authors = ["Timur Rubeko <timcandid@gmail.com>"]
readme = "README.md"
packages = [{include = "f2"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = ">=0.76,<1"
humanize = "^4.10"
send2trash = "^1.8.3"
platformdirs = "^4.2.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.8"
pytest = "^8.0"
textual-dev = "^1.5"
black = "^24.1.1"

[tool.poetry.scripts]
f2 = "f2.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
ignore_missing_imports = true
files = "f2,tests"
